welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (mess = "") {
                 ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "R") {
                        ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "L") {
                        ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "I") {
                        ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "A") {
                        ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "B") {
                        ^BDRBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "C") {
                        ^BDRBuggle:26: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "Z") {
                        ^BDRBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "Y") {
                        ^BDRBuggle:31: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "X") {
                        ^